{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 78,
  "lineage": "70de3a39-1a7f-5e9a-14dd-673c61fda16d",
  "resources": [
    {
      "module": "module.vpc_example_complete-vpc",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:security-group/sg-048a842b82bf5408d",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-048a842b82bf5408d",
            "name": "default",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_tls",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:security-group/sg-06dee61f9aafb26fa",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-06dee61f9aafb26fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ex-Module-VPC-vpc_tls20221114093939777000000004",
            "name_prefix": "ex-Module-VPC-vpc_tls",
            "owner_id": "728738226157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:network-acl/acl-044b93d4205eecfa4",
            "default_network_acl_id": "acl-044b93d4205eecfa4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-044b93d4205eecfa4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "728738226157",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-0523840feffba8113",
              "subnet-065c1c15b2271cd55",
              "subnet-069721c1448f16bbc",
              "subnet-06c45da6824075689",
              "subnet-070a3a888b9c74fe2",
              "subnet-08453d3e1519e37bf",
              "subnet-0847c832d4bfa5232",
              "subnet-0b72c75cd6dfe313c",
              "subnet-0be63437e52ac465a",
              "subnet-0ce8cb0861bab2678",
              "subnet-0d7f95a866ed2029e",
              "subnet-0ebc328e5a33c7695",
              "subnet-0ed24ef4438221097"
            ],
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-default"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-default"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:route-table/rtb-0a2786781c6491849",
            "default_route_table_id": "rtb-0a2786781c6491849",
            "id": "rtb-0a2786781c6491849",
            "owner_id": "728738226157",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-default"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:security-group/sg-048a842b82bf5408d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-048a842b82bf5408d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "728738226157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-default"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-default"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f38c5eb412ada177",
            "domain": "vpc",
            "id": "eipalloc-0f38c5eb412ada177",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-19-147-124.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.147.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-eu-west-1a"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-eu-west-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:internet-gateway/igw-0dd10824af25a5aaa",
            "id": "igw-0dd10824af25a5aaa",
            "owner_id": "728738226157",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f38c5eb412ada177",
            "connectivity_type": "public",
            "id": "nat-012e544041f7a683b",
            "network_interface_id": "eni-07d799b7b1d5b2aba",
            "private_ip": "10.0.11.222",
            "public_ip": "52.19.147.124",
            "subnet_id": "subnet-0ed24ef4438221097",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-eu-west-1a"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-eu-west-1a"
            }
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_eip.nat",
            "module.vpc_example_complete-vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02387fc033ad2454a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-012e544041f7a683b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02387fc033ad2454a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_eip.nat",
            "module.vpc_example_complete-vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dd10824af25a5aaa",
            "id": "r-rtb-0b945c6bc8e05327d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b945c6bc8e05327d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:route-table/rtb-0ca9583368b0aaa8f",
            "id": "rtb-0ca9583368b0aaa8f",
            "owner_id": "728738226157",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-intra"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:route-table/rtb-02387fc033ad2454a",
            "id": "rtb-02387fc033ad2454a",
            "owner_id": "728738226157",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-private"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:route-table/rtb-0b945c6bc8e05327d",
            "id": "rtb-0b945c6bc8e05327d",
            "owner_id": "728738226157",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-public"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00437257705f3aeed",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-0be63437e52ac465a"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.database",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.database",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3b374ea445b2ee5",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-0847c832d4bfa5232"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.database",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.database",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac4540afd5e99903",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-0b72c75cd6dfe313c"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.database",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.database",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0307083e92d006871",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-0523840feffba8113"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018a67c8ad280b956",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-0def3ff0602378e78"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8dd573309ee3360",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-0e9006021dd030811"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8d3618df619385c",
            "route_table_id": "rtb-0ca9583368b0aaa8f",
            "subnet_id": "subnet-070a3a888b9c74fe2"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0568c5a530b8a9b8f",
            "route_table_id": "rtb-0ca9583368b0aaa8f",
            "subnet_id": "subnet-065c1c15b2271cd55"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b2d06692b285707",
            "route_table_id": "rtb-0ca9583368b0aaa8f",
            "subnet_id": "subnet-06c45da6824075689"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e7fcadddf4a3ae8",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-00170a4f1c55b7675"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c2bca0357320873",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-08453d3e1519e37bf"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095024417833936db",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-0d7f95a866ed2029e"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031f6de489224b4a7",
            "route_table_id": "rtb-0b945c6bc8e05327d",
            "subnet_id": "subnet-0ed24ef4438221097"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b6bd9cbb9441b56",
            "route_table_id": "rtb-0b945c6bc8e05327d",
            "subnet_id": "subnet-0da7f3b676743ebbe"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047ea67a66c414307",
            "route_table_id": "rtb-0b945c6bc8e05327d",
            "subnet_id": "subnet-0ebc328e5a33c7695"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ce6a87b507d184e",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-0869cbac95850b89c"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.redshift",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.redshift",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053898407b06f0e79",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-0ce8cb0861bab2678"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.redshift",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.redshift",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1cd62c78ea8fe39",
            "route_table_id": "rtb-02387fc033ad2454a",
            "subnet_id": "subnet-069721c1448f16bbc"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.redshift",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.redshift",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0be63437e52ac465a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be63437e52ac465a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "DB Subnet One"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "DB Subnet One"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0847c832d4bfa5232",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0847c832d4bfa5232",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-db-eu-west-1b"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-db-eu-west-1b"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0b72c75cd6dfe313c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b72c75cd6dfe313c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-db-eu-west-1c"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-db-eu-west-1c"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0523840feffba8113",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0523840feffba8113",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Elasticache Subnet One"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Elasticache Subnet One"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0def3ff0602378e78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0def3ff0602378e78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Elasticache Subnet Two"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Elasticache Subnet Two"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0e9006021dd030811",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.33.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9006021dd030811",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-elasticache-eu-west-1c"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-elasticache-eu-west-1c"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-070a3a888b9c74fe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.51.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070a3a888b9c74fe2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-intra-eu-west-1a"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-intra-eu-west-1a"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-065c1c15b2271cd55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065c1c15b2271cd55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-intra-eu-west-1b"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-intra-eu-west-1b"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-06c45da6824075689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.53.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c45da6824075689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-intra-eu-west-1c"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-intra-eu-west-1c"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-00170a4f1c55b7675",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00170a4f1c55b7675",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Private Subnet One"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Private Subnet One"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-08453d3e1519e37bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08453d3e1519e37bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Private Subnet Two"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Private Subnet Two"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0d7f95a866ed2029e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7f95a866ed2029e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-private-eu-west-1c"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-private-eu-west-1c"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0ed24ef4438221097",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed24ef4438221097",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-public-eu-west-1a"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-public-eu-west-1a"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0da7f3b676743ebbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da7f3b676743ebbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-public-eu-west-1b"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-public-eu-west-1b"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0ebc328e5a33c7695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebc328e5a33c7695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-public-eu-west-1c"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC-public-eu-west-1c"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0869cbac95850b89c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.41.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0869cbac95850b89c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Redshift Subnet One"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Redshift Subnet One"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-0ce8cb0861bab2678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.42.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce8cb0861bab2678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Redshift Subnet Two"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Redshift Subnet Two"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:subnet/subnet-069721c1448f16bbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.43.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069721c1448f16bbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Redshift Subnet Three"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Redshift Subnet Three"
            },
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc/vpc-0a8f170855a8e6a90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044b93d4205eecfa4",
            "default_route_table_id": "rtb-0a2786781c6491849",
            "default_security_group_id": "sg-048a842b82bf5408d",
            "dhcp_options_id": "dopt-0e6dc87210af0dbe0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8f170855a8e6a90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2786781c6491849",
            "owner_id": "728738226157",
            "tags": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC"
            },
            "tags_all": {
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-Module-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_example_complete-vpc.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "module.vpc_example_complete-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "codedeploy",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-0d3dfdd9c97fc72e2",
            "dns_entry": [
              {
                "dns_name": "vpce-0d3dfdd9c97fc72e2-3gbx9pad.codedeploy.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0d3dfdd9c97fc72e2-3gbx9pad-eu-west-1a.codedeploy.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0d3dfdd9c97fc72e2-3gbx9pad-eu-west-1b.codedeploy.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0d3dfdd9c97fc72e2-3gbx9pad-eu-west-1c.codedeploy.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "codedeploy.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0307337ZQ27V94X3VUH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0d3dfdd9c97fc72e2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0932214db852e11ff",
              "eni-0abfb79097ea5c71f",
              "eni-0f1a9b77f76295590"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d"
            ],
            "service_name": "com.amazonaws.eu-west-1.codedeploy",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "codedeploy_commands_secure",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-0a13fe540822c3d41",
            "dns_entry": [
              {
                "dns_name": "vpce-0a13fe540822c3d41-2htagiwd.codedeploy-commands-secure.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0a13fe540822c3d41-2htagiwd-eu-west-1a.codedeploy-commands-secure.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0a13fe540822c3d41-2htagiwd-eu-west-1c.codedeploy-commands-secure.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0a13fe540822c3d41-2htagiwd-eu-west-1b.codedeploy-commands-secure.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "codedeploy-commands-secure.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0307952IAIX7YXIJ2VO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0a13fe540822c3d41",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-002f99df779581e9e",
              "eni-0a4d09af356547ad4",
              "eni-0adbdcf8ce4c6ca14"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d"
            ],
            "service_name": "com.amazonaws.eu-west-1.codedeploy-commands-secure",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "dynamodb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-0afd6fd66dcb7c519",
            "cidr_blocks": [
              "52.94.5.0/24",
              "35.71.73.0/24",
              "52.119.240.0/21",
              "35.71.74.0/23",
              "52.94.24.0/23"
            ],
            "id": "vpce-0afd6fd66dcb7c519",
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"dynamodb:*\",\"Condition\":{\"StringNotEquals\":{\"aws:sourceVpce\":\"vpc-0a8f170855a8e6a90\"}},\"Effect\":\"Deny\",\"Principal\":\"*\",\"Resource\":\"*\",\"Sid\":\"\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02387fc033ad2454a",
              "rtb-0b945c6bc8e05327d",
              "rtb-0ca9583368b0aaa8f"
            ],
            "service_name": "com.amazonaws.eu-west-1.dynamodb",
            "state": "available",
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "dynamodb-vpc-endpoint",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "dynamodb-vpc-endpoint",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-0791375e07cfdbf7d",
            "dns_entry": [
              {
                "dns_name": "vpce-0791375e07cfdbf7d-126u9dz9.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0791375e07cfdbf7d-126u9dz9-eu-west-1c.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0791375e07cfdbf7d-126u9dz9-eu-west-1b.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0791375e07cfdbf7d-126u9dz9-eu-west-1a.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ec2.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z02981053SSPIMY0Y6M1Y"
              },
              {
                "dns_name": "ec2.eu-west-1.api.aws",
                "hosted_zone_id": "Z063200526TW8JFRWDPGW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0791375e07cfdbf7d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04a14a1a9d36f7307",
              "eni-0b7b9ea1f4c0940fb",
              "eni-0de160c7cd9a7e211"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d",
              "sg-06dee61f9aafb26fa"
            ],
            "service_name": "com.amazonaws.eu-west-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-07d99133c6cf6221f",
            "dns_entry": [
              {
                "dns_name": "vpce-07d99133c6cf6221f-uekyyekn.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-07d99133c6cf6221f-uekyyekn-eu-west-1c.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-07d99133c6cf6221f-uekyyekn-eu-west-1a.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-07d99133c6cf6221f-uekyyekn-eu-west-1b.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ec2messages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z029824134UL088Q9X6O8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-07d99133c6cf6221f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-040f9b4ca248d2436",
              "eni-04cd35a9628d02af1",
              "eni-092967f186cdfef3e"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d"
            ],
            "service_name": "com.amazonaws.eu-west-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-051b84747f9153067",
            "dns_entry": [
              {
                "dns_name": "vpce-051b84747f9153067-93o5ybhx.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-051b84747f9153067-93o5ybhx-eu-west-1a.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-051b84747f9153067-93o5ybhx-eu-west-1c.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-051b84747f9153067-93o5ybhx-eu-west-1b.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "api.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z02008243FGBY6ZEICVHC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-051b84747f9153067",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0174110fdc7fa254b",
              "eni-08a0127631a30524a",
              "eni-0a1c463b2db987a36"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Condition\":{\"StringNotEquals\":{\"aws:SourceVpc\":\"vpc-0a8f170855a8e6a90\"}},\"Effect\":\"Deny\",\"Principal\":\"*\",\"Resource\":\"*\",\"Sid\":\"\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-0ba74ec8e937e445d",
            "dns_entry": [
              {
                "dns_name": "vpce-0ba74ec8e937e445d-gg8j7xf1.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0ba74ec8e937e445d-gg8j7xf1-eu-west-1b.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0ba74ec8e937e445d-gg8j7xf1-eu-west-1a.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0ba74ec8e937e445d-gg8j7xf1-eu-west-1c.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z030840828S09VVHC3049"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z030840828S09VVHC3049"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0ba74ec8e937e445d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00d8642e439126682",
              "eni-0234e449753bd8ee1",
              "eni-030771c95c87b9bfa"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Condition\":{\"StringNotEquals\":{\"aws:SourceVpc\":\"vpc-0a8f170855a8e6a90\"}},\"Effect\":\"Deny\",\"Principal\":\"*\",\"Resource\":\"*\",\"Sid\":\"\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-0792d59bbd069442a",
            "dns_entry": [
              {
                "dns_name": "vpce-0792d59bbd069442a-zhkm5qnt.ecs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0792d59bbd069442a-zhkm5qnt-eu-west-1b.ecs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0792d59bbd069442a-zhkm5qnt-eu-west-1c.ecs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0792d59bbd069442a-zhkm5qnt-eu-west-1a.ecs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ecs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z03079542B6FHGGFCPSNB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0792d59bbd069442a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00d89cf56bfed75ff",
              "eni-080a2a4a29adb2308",
              "eni-0c492ac9cc2f500ef"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecs",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-04bde4c66242275d1",
            "dns_entry": [
              {
                "dns_name": "vpce-04bde4c66242275d1-e52gsjj8.kms.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-04bde4c66242275d1-e52gsjj8-eu-west-1a.kms.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-04bde4c66242275d1-e52gsjj8-eu-west-1c.kms.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-04bde4c66242275d1-e52gsjj8-eu-west-1b.kms.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "kms.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z03073831LVT6K7JW21YT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-04bde4c66242275d1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00f49caeb58326765",
              "eni-062175c7f362d679a",
              "eni-081a2b95105cf0094"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d",
              "sg-06dee61f9aafb26fa"
            ],
            "service_name": "com.amazonaws.eu-west-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "lambda",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-0776681c0080c243a",
            "dns_entry": [
              {
                "dns_name": "vpce-0776681c0080c243a-mq4k86zr.lambda.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0776681c0080c243a-mq4k86zr-eu-west-1c.lambda.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0776681c0080c243a-mq4k86zr-eu-west-1a.lambda.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0776681c0080c243a-mq4k86zr-eu-west-1b.lambda.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "lambda.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z02989681G849R3G1HTRT"
              },
              {
                "dns_name": "lambda.eu-west-1.api.aws",
                "hosted_zone_id": "Z065497418BAZ1NRSOSMR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0776681c0080c243a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06ddb5cac35cd78d5",
              "eni-0ee8295ead54ad517",
              "eni-0f97f7aa53d400650"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d"
            ],
            "service_name": "com.amazonaws.eu-west-1.lambda",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-0750d132656e5e808",
            "cidr_blocks": [
              "18.34.32.0/20",
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0750d132656e5e808",
            "ip_address_type": "ipv4",
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "s3-vpc-endpoint",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "s3-vpc-endpoint",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-092bbbe4f7072e30e",
            "dns_entry": [
              {
                "dns_name": "vpce-092bbbe4f7072e30e-mupa9l6j.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-092bbbe4f7072e30e-mupa9l6j-eu-west-1c.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-092bbbe4f7072e30e-mupa9l6j-eu-west-1b.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-092bbbe4f7072e30e-mupa9l6j-eu-west-1a.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssm.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0632327155GK1C3UQCJT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-092bbbe4f7072e30e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-076a176d2fe1f0ea9",
              "eni-0a2b108c34b575407",
              "eni-0a3c80f5aedc6f595"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d",
              "sg-06dee61f9aafb26fa"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728738226157:vpc-endpoint/vpce-0a427fed0aa38c292",
            "dns_entry": [
              {
                "dns_name": "vpce-0a427fed0aa38c292-lnafxmct.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0a427fed0aa38c292-lnafxmct-eu-west-1b.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0a427fed0aa38c292-lnafxmct-eu-west-1a.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0a427fed0aa38c292-lnafxmct-eu-west-1c.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssmmessages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z02250223PH3HAECJGON7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0a427fed0aa38c292",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-049e0b46653882dd9",
              "eni-059916051d17c6147",
              "eni-096085669119ea220"
            ],
            "owner_id": "728738226157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048a842b82bf5408d"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-00170a4f1c55b7675",
              "subnet-08453d3e1519e37bf",
              "subnet-0d7f95a866ed2029e"
            ],
            "tags": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "tags_all": {
              "Endpoint": "true",
              "Example": "ex-Module-VPC",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "Secret"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a8f170855a8e6a90"
          },
          "dependencies": [
            "module.vpc_example_complete-vpc.aws_security_group.vpc_tls",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_iam_policy_document.generic_endpoint_policy",
            "module.vpc_example_complete-vpc.data.aws_security_group.default",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.intra",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_route_table.public",
            "module.vpc_example_complete-vpc.module.vpc.aws_subnet.private",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc.this",
            "module.vpc_example_complete-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_example_complete-vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}